# project3_-Lamotkin-_-Andrey-_-25-555--

./: .env  .gitignore  Makefile  README.md  demo.cast  main.py  pyproject.toml
cli/: interface.py
data/: exchange_rates.json  portfolios.json  rates.json  session.json  users.json
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
